fixing layout issues. ugh. my face is melting

--- a/scss/modules/_main.scss
+++ b/scss/modules/_main.scss
@@ -125,7 +125,7 @@
 
 	.main {
 		min-width: 60%;
-		max-width: calc(100% - 320px);
+		width: calc(100% - 320px);
 		float: right;
 	}
 }
