--- a/scss/modules/modals/_modal--signin.scss
+++ b/scss/modules/modals/_modal--signin.scss
@@ -4,7 +4,7 @@
 	@extend .modal;
 	width: 100%;
 	min-height: 100vh;
-	height: 100%;
+	height: auto;
 	top: 0;
 	padding: 20px 40px;
 
